After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 708862 - Wrong message when starting epiphany with disable-fullscreen=true
Wrong message when starting epiphany with disable-fullscreen=true
Status: RESOLVED FIXED
Product: epiphany
Classification: Core
Component: Interface
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Epiphany Maintainers
Epiphany Maintainers
polish
Depends on:
Blocks:
 
 
Reported: 2013-09-26 18:31 UTC by Lorenzo Tilve
Modified: 2014-02-10 08:50 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
[PATCH] Avoid showing inaccurate message when lockdown.disable-fullscreen is set (898 bytes, patch)
2013-09-26 18:40 UTC, Lorenzo Tilve
needs-work Details | Review
Avoid showing inaccurate message when lockdown.disable-fullscreen is set (1.96 KB, patch)
2014-02-03 15:27 UTC, Lorenzo Tilve
committed Details | Review

Description Lorenzo Tilve 2013-09-26 18:31:16 UTC
When launching epiphany with "org.gnome.Epiphany.lockdown.disable-fullscreen" 
set to true the browser runs in permanent fullscreen mode, but the message "Press F11 to exit fullscreen" it's always displayed on startup, which is an action that is not doable.
Comment 1 Lorenzo Tilve 2013-09-26 18:40:20 UTC
Created attachment 255867 [details] [review]
[PATCH] Avoid showing inaccurate message when lockdown.disable-fullscreen is set
Comment 2 Claudio Saavedra 2014-01-02 10:10:27 UTC
Review of attachment 255867 [details] [review]:

The commit message is not good. Instead of "Fixes the bug." you should summarize what you wrote in the bug description.

::: src/ephy-window.c
@@ +848,3 @@
 	sync_chromes_visibility (window);
+	if (!g_settings_get_boolean (EPHY_SETTINGS_LOCKDOWN, EPHY_PREFS_LOCKDOWN_FULLSCREEN)) {
+		ephy_embed_entering_fullscreen (embed);

I'd say this doesn't make very clear on why we don't call this method when the fullscreen is locked-down. I'd rather check the setting inside the ephy_embed-entering_fullscreen() method, where it's more clear why we are doing this (because the message makes no sense if the fullscreen is locked down).
Comment 3 Lorenzo Tilve 2014-02-03 15:27:53 UTC
Created attachment 267963 [details] [review]
Avoid showing inaccurate message when lockdown.disable-fullscreen is set

Thanks for the comments. I've done the suggested modification and updated the commit description.
Comment 4 Claudio Saavedra 2014-02-04 12:13:23 UTC
Review of attachment 267963 [details] [review]:

Thanks!
Comment 5 Carlos Garcia Campos 2014-02-10 08:50:44 UTC
Comment on attachment 267963 [details] [review]
Avoid showing inaccurate message when lockdown.disable-fullscreen is set

Pushed to git master, thanks!