Avoid showing inaccurate message when lockdown.disable-fullscreen is set

Fixes the bug.

https://bugzilla.gnome.org/show_bug.cgi?id=708862